feature(characters): view all characters
- View all characters
- add metadata
- add documentation

[Finishes #168823097]
